# MyEngine

./: .gitignore  CMakeLists.txt  README.md
MyEngine/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  MyEngine.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexBuffer.h  VertexBufferLayout.h
MyEngine/res/shaders/: Shader.glsl
MyEngine/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
MyEngine/vender/stb_image/: stb_image.h
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
